--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\"  \"npm run client\" "
   },
   "keywords": [],
   "author": "Artur Oganesyan",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
+    "concurrently": "^4.1.0",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2"
   },
   "devDependencies": {
-    "eslint": "^5.9.0",
-    "eslint-plugin-prettier": "^3.0.0",
     "prettier": "^1.15.3"
   }
 }
