--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactGraphQLAppolo",
+  "name": "space_x",
   "version": "1.0.0",
   "description": "App that with SpaceX Missions",
   "main": "app.js",
